--- a/.vim/bundle/vim-latex/ftplugin/latex-suite/templates/PDE.tex
+++ b/.vim/bundle/vim-latex/ftplugin/latex-suite/templates/PDE.tex
@@ -1,7 +1,7 @@
 <+	+>	!comp!	!exe!
 %        File: !comp!expand("%:p:t")!comp!
 %     Created: !comp!strftime("%a %b %d %I:00 %p %Y ").substitute(strftime('%Z'), '\<\(\w\)\(\w*\)\>\(\W\|$\)', '\1', 'g')!comp!
-% Last Change: Sun Sep 17 12:00 AM 2017
+% Last Change: Thu Nov 08 01:00 PM 2018
 
 % Documentclass
 \documentclass[12pt]{article}
@@ -18,17 +18,23 @@
 
 
 % User defined fun
+\newcommand{\F}{\mathcal{F}}
 \newcommand{\R}{\mathbb{R}}
+\newcommand{\N}{\mathbb{N}}
+\newcommand{\Z}{\mathbb{Z}}
 \newcommand{\br}[1]{\color{red} (#1) \color{black}}
 \newcommand{\bb}[1]{\color{blue} (#1) \color{black}}
 \newcommand{\what}{\bb{??}}
-\newcommand{\uhat}{\hat{u}}
-\newcommand{\F}{\mathcal{F}}
 \newcommand{\half}{\frac{1}{2}}
+\newcommand{\norm}[1]{\left\lVert#1\right\rVert}
+\newcommand{\abs}[1]{\left\lvert#1\right\rvert}
+\newcommand{\jap}[1]{\left\langle #1 \right\rangle}
+\newcommand{\inn}[1]{\left\langle #1 \right\rangle}
 \newtheorem{thm}{Theorem}
 \newtheorem{lemma}{Lemma}
 \newtheorem{cor}{Corollary}
 \newtheorem{defn}{Definition}
+\newtheorem{rem}{Remark}
 \newtheorem{result}{Result}
 \newtheorem*{notation}{Notation}
 \newtheorem{prob}{Problem}
