--- a/.vim/bundle/vim-latex/ftplugin/latex-suite/templates/PDE.tex
+++ b/.vim/bundle/vim-latex/ftplugin/latex-suite/templates/PDE.tex
@@ -1,7 +1,7 @@
 <+	+>	!comp!	!exe!
 %        File: !comp!expand("%:p:t")!comp!
 %     Created: !comp!strftime("%a %b %d %I:00 %p %Y ").substitute(strftime('%Z'), '\<\(\w\)\(\w*\)\>\(\W\|$\)', '\1', 'g')!comp!
-% Last Change: Thu Nov 08 01:00 PM 2018
+% Last Change: Tue Nov 27 04:00 PM 2018
 
 % Documentclass
 \documentclass[12pt]{article}
@@ -20,6 +20,7 @@
 % User defined fun
 \newcommand{\F}{\mathcal{F}}
 \newcommand{\R}{\mathbb{R}}
+\newcommand{\C}{\mathbb{C}}
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Z}{\mathbb{Z}}
 \newcommand{\br}[1]{\color{red} (#1) \color{black}}
